--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@discordjs/opus": "^0.8.0",
     "@discordjs/rest": "^1.0.1",
     "@discordjs/voice": "^0.11.0",
+    "cluster": "^0.7.7",
     "discord.js": "^14.2.0",
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^5.0.2",
