--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@discordjs/voice": "^0.11.0",
     "cluster": "^0.7.7",
     "discord.js": "^14.2.0",
+    "fakeyou": "^0.1.0",
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^5.0.2",
     "play-dl": "^1.9.5",
